// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialRoute logged in user has not completed onboarding and does not have a contact with pathway stage does not have self stage should go to GetStarted 1`] = `
Array [
  Object {
    "type": "start onboarding",
  },
  Object {
    "type": "navigate refresh",
  },
]
`;

exports[`initialRoute logged in user has not completed onboarding and does not have a contact with pathway stage has self stage should go to AddSomeone 1`] = `
Array [
  Object {
    "type": "start onboarding",
  },
  Object {
    "type": "navigate refresh",
  },
]
`;

exports[`initialRoute logged in user has not completed onboarding and does not have a contact with pathway stage should not check my reverse contact assignments 1`] = `
Array [
  Object {
    "type": "start onboarding",
  },
  Object {
    "type": "navigate refresh",
  },
]
`;

exports[`initialRoute logged in user has not completed onboarding but has a contact with pathway stage should go to MainTabs 1`] = `
Array [
  Object {
    "type": "nav to main tabs",
  },
]
`;

exports[`initialRoute logged in user has skipped adding person but does not have contact with pathway stage should go to MainTabs 1`] = `
Array [
  Object {
    "type": "nav to main tabs",
  },
]
`;

exports[`initialRoute not logged in user should go to Login screen 1`] = `
Array [
  Object {
    "type": "navigate refresh",
  },
]
`;
